--- a/native-tls/Cargo.toml
+++ b/native-tls/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 async-native-tls = "0.3.3"
 native-tls = "0.2.7"
-trillium-tls-common = { path = "../tls-common" }
+trillium-tls-common = { path = "../tls-common", version = "^0.1.0" }
 
 [dev-dependencies]
 env_logger = "0.8.3"
