--- a/websockets/Cargo.toml
+++ b/websockets/Cargo.toml
@@ -24,8 +24,8 @@ serde = "1.0.126"
 serde_json = { version = "1.0.64", optional = true }
 sha-1 = "0.9.6"
 stopper = "0.2.0"
-trillium = { path = "../trillium" }
-trillium-http = { path = "../http" }
+trillium = { path = "../trillium", version = "^0.1.0" }
+trillium-http = { path = "../http", version = "^0.1.0" }
 
 [dev-dependencies]
 async-net = "1.6.0"
