--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -13,11 +13,15 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 async-compat = "0.2.1"
 log = "0.4.14"
-tokio = { version = "1.8.1", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
 tokio-stream = { version = "0.1.7", features = ["net"] }
 trillium = { path = "../trillium", version = "^0.1.0" }
 trillium-http = { path = "../http", version = "^0.1.0" }
 trillium-server-common = { path = "../server-common", version = "^0.1.0" }
+
+[dependencies.tokio]
+version = "1.8.1"
+features = ["rt", "net", "rt-multi-thread", "time"]
+package = "tokio"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.9"
@@ -26,3 +30,9 @@ signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
 [dev-dependencies]
 tokio = { version = "1.8.1", features = ["full"], package = "tokio" }
 env_logger = "0.8.4"
+
+[dev-dependencies.trillium-testing]
+version = "0.1.1"
+default-features = false
+features = ["tokio"]
+path = "../testing"
