--- a/tokio/Cargo.toml
+++ b/tokio/Cargo.toml
@@ -28,9 +28,6 @@ signal-hook = "0.3.9"
 signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
 
 [dev-dependencies]
-tokio = { version = "1.8.1", features = ["full"], package = "tokio" }
 env_logger = "0.8.4"
-
-[dev-dependencies.trillium-testing]
-version = "^0.2.0"
-path = "../testing"
+tokio = { version = "1.8.1", features = ["full"], package = "tokio" }
+trillium-testing = { path = "../testing" }
